--- a/index.html
+++ b/index.html
@@ -21,5 +21,6 @@
     <script src="switch.js"></script>
     <script src="operadorTernario.js"></script>
     <script src="array.js"></script>
+    <script src="arraysII.js"></script>
 </body>
 </html>
