--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 
     <div id="numbers"></div>
     <div id="results"></div>
+    <a href="bucles.html">TUTU</a>
+    <h1>Perrooooooooooooooooss </h1>
     
-    <h1>hsjadha</h1>
 
     <script src="scripts.js"></script>
     <script src="Operadores.js"></script>
