--- a/bucles.html
+++ b/bucles.html
@@ -9,7 +9,8 @@
     
 
 
-    <script src="Bucles.js"></script>
+    <!--<script src="Bucles.js"></script>-->
+    <script src="for.js"></script>
 
 </body>
 </html>
