trabajando con objeto Persona

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <div id="numbers"></div>
     <div id="results"></div>
     <a href="bucles.html">TUTU</a>
+    <a href="Objetos JS/index.html">Objetos</a>
     <h1>Perrooooooooooooooooss </h1>
     
 
