--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <div id="numbers"></div>
     <div id="results"></div>
     <a href="bucles.html">TUTU</a>
-    <a href="Objetos JS/index.html">Objetos</a>
+    <a href="API's HTML/API IndexedDB - introduccion y creacion/index.html">CRUD</a>
+    <a href="API's HTML/Drag y Drop 2 js/index.html">LISTA DE TAREAS</a>
     <h1>Perrooooooooooooooooss </h1>
     
 
