--- a/API's HTML/Drag y Drop 2 js/index.html
+++ b/API's HTML/Drag y Drop 2 js/index.html
@@ -10,11 +10,11 @@
     <div class="container">
         <div id="pending-tasks" class="tasks">
             <h2 class="title">Tarea Pendientes</h2>
-            <div id="task-1" class="task" draggable="true">Task-1</div>
-            <div id="task-2" class="task" draggable="true">Task-2</div>
-            <div id="task-3" class="task" draggable="true">Task-3</div>
-            <div id="task-4" class="task" draggable="true">Task-4</div>
-            <div id="task-5" class="task" draggable="true">Task-5</div>
+            <div id="task-1" class="task" draggable="true">Belkis</div>
+            <div id="task-2" class="task" draggable="true">TUTU</div>
+            <div id="task-3" class="task" draggable="true">JUGUITO</div>
+            <div id="task-4" class="task" draggable="true">KIKE</div>
+            <div id="task-5" class="task" draggable="true">BRIAN</div>
         </div>
         <div id="finished-taks" class="tasks">
             <h2 class="title">Tereas Finalizadas</h2>
